--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -36,7 +36,7 @@
 
           <div class="col-5">
             <label class="col-5 mb-3 form-label form-label">Аватар: </label>
-            <input type="file" accept=".png, .jpg, .jpeg" name="file">
+            <input class="form-control" type="file" accept=".png, .jpg, .jpeg" name="file">
           </div>
 
           <div class="col-7"></div>
