--- a/src/main/resources/templates/adminListOfAds.html
+++ b/src/main/resources/templates/adminListOfAds.html
@@ -1,10 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <title>list of users</title>
 </head>
-<body>
+<body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<div th:insert="~{model :: header}"></div>
+<div class="border border-secondary rounded mt-1" style="background-color: #404040;"><h1 class="text-center text-primary mt-2">Список объявлений</h1></div>
+<div class="row text-light mt-3" style="width: 100%;
+    max-width: 900px;
+    margin: auto;
+    display: flex;">
+    <table class="table table-striped table-dark">
+        <thead>
+        <tr>
+            <th class="col-3">Название</th>
+            <th class="col-4">Категория</th>
+            <th class="col-3">Город</th>
+            <th class="col-1">Подробнее</th>
+            <th class="col-1">Удалить</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="ad : ${listOfAds}">
+            <td th:text="${ad.title}"></td>
+            <td th:text="${ad.category.name}"></td>
+            <td th:text="${ad.city.name}"></td>
+            <td><a class="btn btn-info" >Inform</a></td>
+            <td><a class="btn btn-danger"> Delete</a></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
