--- a/src/main/resources/templates/adminListOfUsers.html
+++ b/src/main/resources/templates/adminListOfUsers.html
@@ -8,31 +8,31 @@
 </head>
 <body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
-
-<table class=" ">
-    <thead class="">
-    <tr class="">
-        <th class="border  border-slate-900 w-5/12 ">Name</th>
-        <th class="border  border-slate-900 w-6/12">Surname</th>
-        <th class="border  border-slate-900 w-6/12">Phone number</th>
-        <th class="border border-slate-900 w-screen">Delete</th>
-    </tr>
-    </thead>
-    <tbody class="">
-    <tr class="h-16" th:each="user : ${listOfUsers}">
-        <td th:text="${user.name}"></td>
-        <td th:text="${user.surname}"></td>
-        <td th:text="${user.phoneNumber}"></td>
-        <td><a th:href="'/admin/delete/' + ${user.id}">delete</a></td>
-    </tr>
-    </tbody>
-</table>
-
-
-<div class="mt-3 ml-3 mb-3 mr-3">
-    <a href="/user/new">
-        Add new user</a>
+<div class="border border-secondary rounded mt-1" style="background-color: #404040;"><h1 class="text-center text-primary mt-2">Список пользователей</h1></div>
+<div class="row text-light mt-3" style="width: 100%;
+    max-width: 900px;
+    margin: auto;
+    display: flex;">
+    <table class="table table-striped table-dark">
+        <thead>
+        <tr>
+            <th class="col-4">Имя</th>
+            <th class="col-4">Фамилия</th>
+            <th class="col-3">Номер телефона</th>
+            <th class="col-1">Удалить</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="user : ${listOfUsers}">
+            <td th:text="${user.name}"></td>
+            <td th:text="${user.surname}"></td>
+            <td th:text="${user.phoneNumber}"></td>
+            <td><a class="btn btn-danger" th:href="'/admin/delete/' + ${user.id}">delete</a></td>
+        </tr>
+        </tbody>
+    </table>
 </div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
