--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -13,36 +13,67 @@
             <div class="col col-lg-9 col-xl-12 ">
                 <div class="card bg-dark">
                     <div class="p-4 text-black" style="background-color: #f8f9fa;">
-                        <h1  th:text="${ad.title}" class="text-primary"><strong></strong></h1>
-                        <div class="d-flex justify-content-end text-center py-1">
+                        <div sec:authorize="isAuthenticated()">
 
-                            <div sec:authorize="isAuthenticated()" class="px-3">
-                                <a  class="btn" th:href="'/user/' + ${ad.user.id} + '/ads'" th:text="'Создатель: ' + ${ad.user.name} + ' ' + ${ad.user.surname}"></a>
+                            <div th:if="${#authentication.getPrincipal().id == ad.user.id}" class="dropdown open d-flex link-danger justify-content-end text-center ">
+                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                                    Dropdown button
+                                </button>
+                                <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
+                                    <a class="dropdown-item link-warning" warninghref="#">Редактировать</a>
+                                    <a class="btn dropdown-item link-danger" th:href="'/ad/delete/' + ${ad.id}">Удалить объявление</a>
+                                </div>
                             </div>
-                            <div sec:authorize="isAnonymous()" class="px-3">
-                                <a class="btn btn-success" href="/login">Создатель:  Для просмотра необходимо авторизоваться</a>
+
+                        </div>
+                        <h1  th:text="${ad.title}" class="text-primary mx-5"><strong></strong></h1>
+                        <div class="row">
+                            <div class="col-6 mt-5">
+                                <div class="mt-5 mb-3">
+                                    <label  class="form-label"><strong>Категория</strong>:</label>
+                                    <h3 th:text="${ad.category.name}"></h3>
+                                </div>
+                            </div>
+
+                            <div class="d-flex col-6 justify-content-end text-center py-1">
+                                <div sec:authorize="isAuthenticated()">
+                                    <a class="btn btn-success" th:href="'/user/' + ${ad.user.id} + '/ads'" th:text="'Создатель: ' + ${ad.user.name} + ' ' + ${ad.user.surname}"></a>
+                                    <p>Номер телефона:</p>
+                                </div>
+                                <div sec:authorize="isAnonymous()" >
+                                    <a class="btn btn-success" href="/login">Создатель:  Для просмотра необходимо авторизоваться</a>
+                                </div>
                             </div>
                         </div>
-
-
-
-                        <div class="bg-light col-12 mt-5">
-                            <div class="col-sm-6 mt-5 mb-3">
-                                <label  class="form-label"><strong>Категория</strong>:</label>
-                                <h3 th:text="${ad.category.name}"></h3>
+                        <div class="row">
+                            <div class="col-4 mx-3 border border-secondary rounded">
+                                <div class="mt-3 mb-1">
+                                    <label  class="form-label"><strong>Город</strong>:</label>
+                                    <h4 th:text="${ad.city.name}"></h4>
+                                </div>
+                            </div>
+                            <div class="col-4 mx-3 border border-secondary rounded">
+                                <div class="mt-3 mb-1 ">
+                                    <label  class="form-label"><strong>Дата публикация:</strong>:</label>
+                                    <h4 th:text="${#temporals.format(ad.dateOfCreation,'dd-MM-yyyy HH:mm')}"></h4>
+                                </div>
+                            </div>
+                            <div class="col-3 mx-3 text-center">
+                                <div class="mt-3 mb-1 ">
+                                    <label  class="form-label"><h2><strong>Цена:</strong></h2></label>
+                                    <h2 class="text-danger" th:text="${ad.price}+'p'"></h2>
+                                </div>
                             </div>
                         </div>
-
-
 
 
 
                     </div>
-                    <div class="card-body p-4 text-black">
+                    <div class="card-body  p-4 text-black">
                         <div class="mb-5">
                             <p class="lead fw-normal mb-1 text-light">Описание</p>
-                            <div class="p-4" style="background-color: #f8f9fa;">
-                                <p th:text="${ad.category.name}" class="font-italic mb-1"></p>
+                            <div class="p-4 rounded " style="background-color: #f8f9fa;">
+                                <p th:text="${ad.description}" class="font-italic mb-1"></p>
                             </div>
                         </div>
                         <div class="d-flex justify-content-between align-items-center mb-4">
@@ -68,21 +99,6 @@
     </div>
 </section>
 
-
-
-
-
-
-
-<p th:text="'Price: ' + ${ad.price}"></p>
-<p th:text="'Category: ' + ${ad.category.name}"></p>
-<p th:text="'City: ' + ${ad.city.name}"></p>
-<p th:text="'Date of creation: ' + ${ad.dateOfCreation}"></p>
-<ul th:each="image: ${ad.imageList}">
-    <li><img th:src="'/image/' + ${image.id}"></li>
-</ul>
-<p>Creator: <a th:href="'/user/' + ${ad.user.id} + '/ads'" th:text="${ad.user.name} + ' ' + ${ad.user.surname}"></a></p>
-<p><a href="/">show list of ads</a></p>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
