--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -20,7 +20,7 @@
                                     Dropdown button
                                 </button>
                                 <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item link-warning" th:href="'ad/edit/' + ${ad.id}">Редактировать</a>
+                                    <a class="dropdown-item link-warning" th:href="'/ad/edit/' + ${ad.id}">Редактировать</a>
                                     <a class="btn dropdown-item link-danger" th:href="'/ad/delete/' + ${ad.id}">Удалить объявление</a>
                                 </div>
                             </div>
