--- a/src/main/resources/templates/editAd.html
+++ b/src/main/resources/templates/editAd.html
@@ -2,13 +2,84 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Create new advertisement</title>
 </head>
-<body class="img-fluid"
-      style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<body class="img-fluid" style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
+
+<main>
+    <div class="py-3 text-center mt-3">
+        <h2>Новые объявление</h2>
+        <p class="lead"  th:text="${user.name} + ' ' + ${user.surname} + ' (' + ${user.phoneNumber} + ')'"></p>
+    </div>
+    <div class="row text-light" style="width: 100%;
+    max-width: 900px;
+    margin: auto;
+    display: flex;">
+        <div class="bg-dark bg-opacity-75 rounded ">
+            <form  th:action="@{/ad/edit/{id}(id=${ad.id})}" th:object="${ad}" method="post" enctype="multipart/form-data">
+                <div class="row g-3">
+
+                    <div class="col-sm-6 mt-5 mb-3">
+                        <label  class="form-label">Название:</label>
+                        <input type="text" th:field="*{title}" class="form-control" th:value="${title}">
+                        <span class="text-danger" th:if="${#fields.hasErrors('title')}" th:errors="*{title}"></span>
+                    </div>
+
+                    <div class="col-sm-6 mt-5 mb-3">
+                        <label  class="form-label">Категория:</label>
+                        <select  class="form-control" th:field="*{category}">
+                            <option th:each="categoryFromList : ${listOfCategories}" th:value="${categoryFromList.id}"
+                                    th:text="${categoryFromList.name}"></option>
+                        </select>
+                    </div>
+
+                    <div class="col-sm-3 mt-4 mb-3"></div>
+                    <div class="col-sm-6 mt-3 mb-3">
+                        <label  class="form-label">Город:</label>
+                        <select class="form-control" th:field="*{city}">
+                            <option th:each="cityFromList : ${listOfCities}" th:value="${cityFromList.id}"
+                                    th:text="${cityFromList.name}"></option>
+                        </select>
+                    </div>
+                    <div class="col-sm-3 mt-4 mb-3"></div>
+
+                    <div class="col-4">
+                        <label class=" mb-3 form-label ">Фото №1: <span class="text-muted">(Главное фото)</span></label>
+                        <input class="form-control" type="file" accept=".png, .jpg, .jpeg" name="file1">
+                    </div>
+
+                    <div class="col-4">
+                        <label class="col-5 mb-3 form-label ">Фото №2: </label>
+                        <input class="form-control" type="file" accept=".png, .jpg, .jpeg" name="file2">
+                    </div>
+
+                    <div class="col-4">
+                        <label class="col-5 mb-3 form-label ">Фото №3: </label>
+                        <input class="form-control" type="file" accept=".png, .jpg, .jpeg" name="file3">
+                    </div>
+
+                    <div class="col-12 mt-3 mb-3">
+                        <label  class="form-label">Описание: </label>
+                        <textarea class="form-control" th:field="*{description}"></textarea>
+                    </div>
+
+                    <div class="col-4 mt-3 mb-3">
+                        <button class="w-100 btn btn-outline-primary btn-lg" type="reset" value="Reset">Очистить</button>
+                    </div>
+                    <div class="col-4"></div>
+                    <div class="col-4 mt-3 mb-3">
+                        <button class="w-100 btn btn-lg btn-outline-success" type="submit" value="Submit">Добавить</button>
+                    </div>
+
+                </div>
+            </form>
+        </div>
+    </div>
+</main>
+
+
 <h1>form for editing an advertisement</h1>
 <h2 th:text="${ad.user.name} + ' ' + ${ad.user.surname} + '(' + ${ad.user.phoneNumber} + ')'"></h2>
 <form th:action="@{/ad/edit/{id}(id=${ad.id})}" th:object="${ad}" method="post" enctype="multipart/form-data">
