error messages, delete ad for admin

--- a/src/main/resources/templates/adminListOfUsers.html
+++ b/src/main/resources/templates/adminListOfUsers.html
@@ -27,7 +27,7 @@
             <td th:text="${user.name}"></td>
             <td th:text="${user.surname}"></td>
             <td th:text="${user.phoneNumber}"></td>
-            <td><a class="btn btn-danger" th:href="'/admin/delete/' + ${user.id}">delete</a></td>
+            <td><a class="btn btn-danger" th:href="'/admin/delete/user/' + ${user.id}">delete</a></td>
         </tr>
         </tbody>
     </table>
