--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -2,10 +2,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <title>Ad</title>
 </head>
-<body class="img-fluid" style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
+<body class="img-fluid"
+      style="background-attachment: fixed; background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
 <section class="h-100 gradient-custom-2 ">
     <div class="container py-5 h-100 ">
@@ -15,57 +17,62 @@
                     <div class="p-4 text-black" style="background-color: #f8f9fa;">
                         <div sec:authorize="isAuthenticated()">
 
-                            <div th:if="${#authentication.getPrincipal().id == ad.user.id}" class="dropdown open d-flex link-danger justify-content-end text-center ">
-                                <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                            <div th:if="${#authentication.getPrincipal().id == ad.user.id}"
+                                 class="dropdown open d-flex link-danger justify-content-end text-center ">
+                                <button class="btn btn-secondary dropdown-toggle" type="button"
+                                        data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
                                     Dropdown button
                                 </button>
                                 <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
-                                    <a class="dropdown-item link-warning" th:href="'/ad/edit/' + ${ad.id}">Редактировать</a>
-                                    <a class="btn dropdown-item link-danger" th:href="'/ad/delete/' + ${ad.id}">Удалить объявление</a>
+                                    <a class="dropdown-item link-warning"
+                                       th:href="'/ad/edit/' + ${ad.id}">Редактировать</a>
+                                    <a class="btn dropdown-item link-danger" th:href="'/ad/delete/' + ${ad.id}">Удалить
+                                        объявление</a>
                                 </div>
                             </div>
 
                         </div>
-                        <h1  th:text="${ad.title}" class="text-primary mx-5"><strong></strong></h1>
+                        <h1 th:text="${ad.title}" class="text-primary mx-5"><strong></strong></h1>
                         <div class="row">
                             <div class="col-6 mt-5">
                                 <div class="mt-5 mb-3">
-                                    <label  class="form-label"><strong>Категория</strong>:</label>
+                                    <label class="form-label"><strong>Категория</strong>:</label>
                                     <h3 th:text="${ad.category.name}"></h3>
                                 </div>
                             </div>
 
                             <div class="d-flex col-6 justify-content-end text-center py-1">
                                 <div sec:authorize="isAuthenticated()">
-                                    <a class="btn btn-success" th:href="'/user/' + ${ad.user.id} + '/ads'" th:text="'Создатель: ' + ${ad.user.name} + ' ' + ${ad.user.surname}"></a>
+                                    <a class="btn btn-success" th:href="'/user/' + ${ad.user.id} + '/ads'"
+                                       th:text="'Создатель: ' + ${ad.user.name} + ' ' + ${ad.user.surname}"></a>
                                     <p>Номер телефона:</p>
                                 </div>
-                                <div sec:authorize="isAnonymous()" >
-                                    <a class="btn btn-success" href="/login">Создатель:  Для просмотра необходимо авторизоваться</a>
+                                <div sec:authorize="isAnonymous()">
+                                    <a class="btn btn-success" href="/login">Создатель: Для просмотра необходимо
+                                        авторизоваться</a>
                                 </div>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-4 mx-3 border border-secondary rounded">
                                 <div class="mt-3 mb-1">
-                                    <label  class="form-label"><strong>Город</strong>:</label>
+                                    <label class="form-label"><strong>Город</strong>:</label>
                                     <h4 th:text="${ad.city.name}"></h4>
                                 </div>
                             </div>
                             <div class="col-4 mx-3 border border-secondary rounded">
                                 <div class="mt-3 mb-1 ">
-                                    <label  class="form-label"><strong>Дата публикация:</strong>:</label>
+                                    <label class="form-label"><strong>Дата публикация:</strong>:</label>
                                     <h4 th:text="${#temporals.format(ad.dateOfCreation,'dd-MM-yyyy HH:mm')}"></h4>
                                 </div>
                             </div>
                             <div class="col-3 mx-3 text-center">
                                 <div class="mt-3 mb-1 ">
-                                    <label  class="form-label"><h2><strong>Цена:</strong></h2></label>
+                                    <label class="form-label"><h2><strong>Цена:</strong></h2></label>
                                     <h2 class="text-danger" th:text="${ad.price}+'p'"></h2>
                                 </div>
                             </div>
                         </div>
-
 
 
                     </div>
@@ -80,15 +87,18 @@
                             <h4 class="lead fw-normal mb-0 text-light">Фотографии</h4>
                         </div>
                         <div class="row gap-3 ">
-                            <div th:each="image: ${ad.imageList}"  style="background-color:#E0E0E0 ; width: 420px;" class="row g-2">
+                            <div th:each="image: ${ad.imageList}" style="background-color:#E0E0E0 ; width: 420px;"
+                                 class="row g-2">
                                 <div class="col mb-2">
                                     <img style="width: 420px; height: 400px; " th:src="'/image/' + ${image.id} "
                                          alt="image 1" class="w-100 rounded-3">
                                 </div>
                             </div>
-                            <div th:if="${ #lists.isEmpty(ad.imageList)}"  style="background-color:#E0E0E0 ;" class="row g-2">
+                            <div th:if="${ #lists.isEmpty(ad.imageList)}" style="background-color:#E0E0E0 ;"
+                                 class="row g-2">
                                 <div class=" mb-2 text-center">
-                                    <img src="https://prikolists.club/wp-content/uploads/2019/11/Screenshot_1-13.jpg" class=" rounded" width="300" height="230" alt="...">
+                                    <img src="https://prikolists.club/wp-content/uploads/2019/11/Screenshot_1-13.jpg"
+                                         class=" rounded" width="300" height="230" alt="...">
                                 </div>
                             </div>
                         </div>
@@ -100,6 +110,8 @@
 </section>
 
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+        crossorigin="anonymous"></script>
 </body>
 </html>
