--- a/src/main/resources/templates/adsListByUser.html
+++ b/src/main/resources/templates/adsListByUser.html
@@ -7,25 +7,32 @@
 </head>
 <body style="background-image: url('https://phonoteka.org/uploads/posts/2021-04/1618458257_40-phonoteka_org-p-fon-dlya-lendinga-40.jpg');">
 <div th:insert="~{model :: header}"></div>
-<h1 th:text="'Ads created by ' + ${user.name} + ' ' + ${user.surname}"></h1>
+<div class="border border-secondary rounded mt-1" style="background-color: #404040;"><h1  th:text="'Объявления пользователя ' + ${user.name} + ' ' + ${user.surname}" class="text-center text-primary mt-2"></h1></div>
+<div  class="m-5">
+    <div class="row gap-3 ">
+        <div th:each="ad : ${listOfAds}" class="card  bg-dark " style="width: 291px;">
+            <div th:if="${not #lists.isEmpty(ad.imageList)}">
+                <img th:src="'/image/' + ${ad.imageList.get(0).id}" class="card-img-top rounded" width="300" height="230" alt="...">
+            </div>
+            <div th:if="${ #lists.isEmpty(ad.imageList)}" >
+                <img src="https://prikolists.club/wp-content/uploads/2019/11/Screenshot_1-13.jpg" class="card-img-top rounded" width="300" height="230" alt="...">
+            </div>
 
+            <div class="card-body text-white ">
+                <div class="text-center p-3 text-primary" ><h4 class=" " th:text="${ad.title} "></h4></div>
+                <p th:text="'Категория: ' + ${ad.category.name}" class="card-text"></p>
+                <p th:text="'Город: ' + ${ad.city.name}" class="card-text"></p>
+                <p th:text="'Цена: '+${ad.price}+'p.'" class="card-text"></p>
+                <p th:text="'Дата публикации: ' +  ${#temporals.format(ad.dateOfCreation,'dd-MM-yyyy HH:mm')}"></p>
 
-<table>
-    <tr>
-        <th>Title</th>
-        <th>Description</th>
-        <th>Date of creation</th>
-        <th>More info</th>
-        <th>Delete</th>
-    </tr>
-    <tr th:each="ad : ${listOfAds}">
-        <th th:text="${ad.title}"></th>
-        <th th:text="${ad.description}"></th>
-        <th th:text="${ad.dateOfCreation}"></th>
-        <th><a th:href="'/ad/info/' + ${ad.id}">more info</a></th>
-        <th><a th:href="'/ad/delete/' + ${ad.id}">delete</a></th>
-    </tr>
-</table>
+            </div>
+            <div class="d-flex justify-content-end text-center py-1">
+                <a type="button" th:href="'/ad/info/' + ${ad.id}" class="btn btn-secondary">Подробнее...</a>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
