--- a/src/main/resources/templates/newAd.html
+++ b/src/main/resources/templates/newAd.html
@@ -50,7 +50,7 @@
 
 
                     <div class="col-4">
-                        <label class=" mb-3 form-label ">Фото №1: <span class="text-muted">(Главное фото)</span></label>
+                        <label class=" mb-3 form-label ">Фото №1:</label>
                         <input class="form-control" type="file" accept=".png, .jpg, .jpeg" name="file1">
                     </div>
 
