--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -30,7 +30,21 @@
                                         объявление</a>
                                 </div>
                             </div>
-
+                            <div th:if="${#authentication.getPrincipal().id != ad.user.id}">
+                                <div th:if="${#authentication.getPrincipal().role.toString()=='ROLE_ADMIN'}"
+                                     class="dropdown open d-flex link-danger justify-content-end text-center ">
+                                    <button class="btn btn-secondary dropdown-toggle" type="button"
+                                            data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
+                                        Dropdown button
+                                    </button>
+                                    <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
+                                        <a class="dropdown-item link-warning"
+                                           th:href="'/ad/edit/' + ${ad.id}">Редактировать</a>
+                                        <a class="btn dropdown-item link-danger" th:href="'/ad/delete/' + ${ad.id}">Удалить
+                                            объявление</a>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <h1 th:text="${ad.title}" class="text-primary mx-5"><strong></strong></h1>
                         <div class="row">
@@ -45,7 +59,8 @@
                                 <div sec:authorize="isAuthenticated()">
                                     <a class="btn btn-success" th:href="'/user/' + ${ad.user.id} + '/ads'"
                                        th:text="'Создатель: ' + ${ad.user.name} + ' ' + ${ad.user.surname}"></a>
-                                    <p>Номер телефона:</p>
+
+                                    <p th:text="'Номер телефона:'+ ${ad.user.phoneNumber}"></p>
                                 </div>
                                 <div sec:authorize="isAnonymous()">
                                     <a class="btn btn-success" href="/login">Создатель: Для просмотра необходимо
