--- a/src/main/resources/templates/showAd.html
+++ b/src/main/resources/templates/showAd.html
@@ -21,7 +21,7 @@
                                  class="dropdown open d-flex link-danger justify-content-end text-center ">
                                 <button class="btn btn-secondary dropdown-toggle" type="button"
                                         data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                                    Dropdown button
+                                    Опции
                                 </button>
                                 <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
                                     <a class="dropdown-item link-warning"
@@ -35,7 +35,7 @@
                                      class="dropdown open d-flex link-danger justify-content-end text-center ">
                                     <button class="btn btn-secondary dropdown-toggle" type="button"
                                             data-bs-toggle="dropdown" aria-haspopup="false" aria-expanded="false">
-                                        Dropdown button
+                                        Опции
                                     </button>
                                     <div class="dropdown-menu bg-dark" aria-labelledby="dropdownMenuButton">
                                         <a class="dropdown-item link-warning"
